--- a/packages/@markuplint/astro-parser/package.json
+++ b/packages/@markuplint/astro-parser/package.json
@@ -15,11 +15,14 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
+	"devDependencies": {
+		"@astrojs/parser": "0.22.2"
+	},
 	"dependencies": {
-		"@astrojs/parser": "0.20",
 		"@markuplint/html-parser": "3.4.0",
 		"@markuplint/ml-ast": "3.0.0",
 		"@markuplint/parser-utils": "3.4.0",
+		"astro-eslint-parser": "^0.13.2",
 		"tslib": "^2.4.1"
 	}
 }
