--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -32,6 +32,9 @@
 		},
 		{
 			"path": "../@markuplint/html-spec"
+		},
+		{
+			"path": "../@markuplint/shared"
 		}
 	],
 	"include": ["./src/**/*"],
