Consolidate `console.log` output to `OutputChannel`

--- a/packages/vscode/.eslintrc
+++ b/packages/vscode/.eslintrc
@@ -3,7 +3,12 @@
 	"globals": {
 		"NodeJS": true
 	},
-	"rules": {
-		"no-console": "off"
-	}
+	"overrides": [
+		{
+			"files": ["./src/server/v1.ts", "./src/server/v2.ts"],
+			"rules": {
+				"no-console": "off"
+			}
+		}
+	]
 }
