--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -76,14 +76,18 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run build",
+		"vscode:prepublish": "yarn vscode:build",
 		"vscode:build": "tsc -p ./",
-		"vscode:dev": "tsc -watch -p ./"
+		"vscode:dev": "tsc -watch -p ./",
+		"vscode:login": "vsce login yusukehirao",
+		"vscode:package": "vsce package --no-dependencies",
+		"vscode:release": "vsce publish --no-dependencies"
 	},
 	"devDependencies": {
 		"@types/node": "16",
 		"@types/semver": "^7.3.13",
-		"@types/vscode": "^1.77.0"
+		"@types/vscode": "^1.77.0",
+		"@vscode/vsce": "^2.18.0"
 	},
 	"dependencies": {
 		"@markuplint/ml-spec": "3.6.0",
