--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
 		"all": "yarn lint; yarn clean; yarn gen; yarn build; yarn schema; yarn test:clear; yarn test;",
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
 		"cli": "./packages/markuplint/bin/markuplint",
-		"vscode:build": "cd packages/vscode/; yarn --ignore-engines vscode:build",
-		"vscode:dev": "cd packages/vscode/; yarn --ignore-engines vscode:dev",
-		"vscode:login": "cd packages/vscode/; yarn --ignore-engines vscode:login",
-		"vscode:release": "cd packages/vscode/; yarn --ignore-engines vscode:release",
+		"vscode:dev": "cd vscode; yarn --ignore-engines vscode:dev",
+		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn spellcheck; prettier --write './vscode/**/*{ts,tsx,json,rc,md}';",
+		"vscode:login": "cd vscode; yarn --ignore-engines vscode:login",
+		"vscode:package": "cd vscode; yarn --ignore-engines vscode:package",
+		"vscode:release": "cd vscode; yarn --ignore-engines vscode:release",
 		"site:dev": "cd website; yarn; yarn site:start",
 		"site:lint": "cd website; yarn; yarn site:lint",
 		"site:build": "cd website; yarn; yarn site:build",
@@ -103,6 +104,7 @@
 		"@types/jest": "^29.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.55.0",
 		"@typescript-eslint/parser": "^5.55.0",
+		"@vscode/vsce": "^2.18.0",
 		"browser-resolve": "^2.0.0",
 		"coveralls": "^3.1.1",
 		"cspell": "^6.17.0",
