--- a/vscode/tsconfig.json
+++ b/vscode/tsconfig.json
@@ -1,15 +1,16 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		"composite": true,
 		"module": "commonjs",
 		"target": "es2022",
+		"importHelpers": false,
 		"outDir": "./out",
 		"rootDir": "./src"
 	},
 	"references": [
 		{
-			"path": "../markuplint"
+			"path": "../packages/markuplint"
 		}
 	],
 	"include": ["src/**/*"],
