--- a/website/.markuplintrc
+++ b/website/.markuplintrc
@@ -31,14 +31,7 @@
       "rules": {
         "invalid-attr": {
           "options": {
-            "attrs": {
-              "property": {
-                "type": "Any"
-              },
-              "content": {
-                "type": "Any"
-              }
-            }
+            "allowAttrs": ["property", "content"]
           }
         },
         "required-attr": false
@@ -49,11 +42,14 @@
       "rules": {
         "invalid-attr": {
           "options": {
-            "attrs": {
-              "jsx": {
-                "type": "Boolean"
+            "allowAttrs": [
+              {
+                "name": "jsx",
+                "value": {
+                  "type": "Boolean"
+                }
               }
-            }
+            ]
           }
         }
       }
