--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
 		"postinstall-postinstall": "^2.1.0",
 		"prettier": "^2.8.7",
 		"prettier-plugin-md-nocjsp": "^1.5.0",
-		"textlint": "^13.3.2",
+		"textlint": "12",
 		"textlint-filter-rule-comments": "^1.2.2",
 		"textlint-rule-preset-ja-spacing": "^2.2.0",
 		"textlint-rule-preset-ja-technical-writing": "^7.0.0",
