--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -21,7 +21,7 @@
 	"devDependencies": {
 		"@types/cosmiconfig": "^6.0.0",
 		"@types/glob": "^8.0.0",
-		"@types/node": "18.15.12"
+		"@types/node": "18.15.13"
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "3.6.1",
@@ -31,9 +31,9 @@
 		"@markuplint/ml-spec": "3.7.0",
 		"@markuplint/shared": "3.5.0",
 		"cosmiconfig": "^8.0.0",
-		"glob": "^8.0.3",
+		"glob": "^10.2.1",
 		"jsonc": "^2.0.0",
-		"minimatch": "8",
+		"minimatch": "^9.0.0",
 		"tslib": "^2.4.1"
 	}
 }
