--- a/packages/@markuplint/rule-textlint/package.json
+++ b/packages/@markuplint/rule-textlint/package.json
@@ -25,9 +25,9 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-core": "3.8.0",
-		"@textlint/kernel": "^12.2.3",
-		"textlint": "^12.2.3",
-		"textlint-plugin-html": "^0.3.0",
+		"@textlint/kernel": "13.3.2",
+		"textlint": "12",
+		"textlint-plugin-html": "0.3.0",
 		"tslib": "^2.4.1"
 	}
 }
