--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -24,13 +24,13 @@
 		"css-tree": "^2.3.1",
 		"debug": "^4.3.4",
 		"leven": "3",
-		"whatwg-mimetype": "2"
+		"whatwg-mimetype": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/bcp-47": "1",
 		"@types/css-tree": "^2.0.1",
 		"@types/debug": "^4.1.7",
-		"@types/whatwg-mimetype": "2",
+		"@types/whatwg-mimetype": "3.0.0",
 		"type-fest": "^3.8.0"
 	}
 }
