--- a/website/package.json
+++ b/website/package.json
@@ -17,13 +17,13 @@
     "@docusaurus/plugin-client-redirects": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
     "@docusaurus/remark-plugin-npm2yarn": "^2.4.0",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "1",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "gray-matter": "^4.0.3",
     "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0",
