--- a/vscode/package.json
+++ b/vscode/package.json
@@ -81,7 +81,8 @@
 		"vscode:dev": "tsc -watch -p ./",
 		"vscode:login": "vsce login yusukehirao",
 		"vscode:package": "vsce package",
-		"vscode:release": "vsce publish"
+		"vscode:release": "vsce publish",
+		"vscode:up": "yarn upgrade-interactive --latest"
 	},
 	"devDependencies": {
 		"@types/node": "16",
@@ -93,7 +94,7 @@
 		"@markuplint/i18n": "3.7.0",
 		"@markuplint/ml-spec": "3.7.0",
 		"markuplint": "3.8.0",
-		"semver": "^7.4.0",
+		"semver": "^7.5.0",
 		"vscode-languageclient": "^8.1.0",
 		"vscode-languageserver": "^8.1.0",
 		"vscode-languageserver-textdocument": "^1.0.8"
