--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -24,8 +24,7 @@
 		"@types/debug": "^4.1.7",
 		"@types/has-yarn": "^1.0.1",
 		"@types/meow": "^6.0.0",
-		"@types/uuid": "^9.0.0",
-		"execa": "5"
+		"@types/uuid": "^9.0.0"
 	},
 	"dependencies": {
 		"@markuplint/create-rule-helper": "3.8.0",
