Add --ignore-engines option

--- a/.github/workflows/test-legacy.yml
+++ b/.github/workflows/test-legacy.yml
@@ -33,5 +33,5 @@ jobs:
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node }}
-            - run: yarn install --production
+            - run: yarn install --production --ignore-engines
             - run: yarn test:coverage
