--- a/.github/workflows/test-legacy.yml
+++ b/.github/workflows/test-legacy.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                node: [14, 16, 18, 20]
+                node: [14, 16]
         steps:
             - uses: actions/checkout@v3
               with:
