--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
                     - node: 20
                       os: ubuntu-latest
                       experimental: true
+                shard: [1/4, 2/4, 3/4, 4/4]
         steps:
             - uses: actions/checkout@v3
               with:
@@ -43,4 +44,4 @@ jobs:
               run: yarn build
 
             - name: Test
-              run: yarn test:coverage
+              run: yarn test:coverage --shard=${{ matrix.shard }}
