Specify conditions for GitHub Actions.

--- a/.github/workflows/test-legacy.yml
+++ b/.github/workflows/test-legacy.yml
@@ -1,12 +1,13 @@
 name: Legacy Test
 
 on:
-    push:
-        branches:
-            - dev
     pull_request:
         branches:
             - dev
+        paths:
+            - '**'
+            - '!vscode/**'
+            - '!website/**'
 
 jobs:
     test:
