--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
                     - node: 20
                       os: ubuntu-latest
                       experimental: true
-                shard: [1/4, 2/4, 3/4, 4/4]
+                shard: [1/3, 2/3, 3/3]
         steps:
             - uses: actions/checkout@v3
               with:
