--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,10 @@ on:
         branches:
             - dev
             - next
-        paths:
-            - '**'
-            - '!**/*.md'
-            - '!vscode/**'
-            - '!website/**'
+        paths-ignore:
+            - '**/*.md'
+            - 'vscode/**'
+            - 'website/**'
 
 jobs:
     test:
