--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,10 +4,9 @@ on:
     pull_request:
         branches:
             - dev
-        paths:
-            - '**'
-            - '!vscode/**'
-            - '!website/**'
+        paths-ignore:
+            - 'vscode/**'
+            - 'website/**'
 
 jobs:
     lint:
