--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -18,13 +18,11 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {
-		"@markuplint/ml-ast": "3.1.0",
-		"@markuplint/shared": "3.5.0",
-		"@types/mustache": "^4.2.2"
-	},
 	"dependencies": {
+		"@markuplint/ml-ast": "3.1.0",
 		"@markuplint/selector": "3.7.0",
+		"@markuplint/shared": "3.5.0",
+		"@types/mustache": "^4.2.2",
 		"deepmerge": "^4.3.1",
 		"is-plain-object": "^5.0.0",
 		"mustache": "^4.2.0",
