--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -32,12 +32,10 @@
 		"@markuplint/ml-spec": "3.7.0",
 		"@markuplint/parser-utils": "3.6.1",
 		"@markuplint/selector": "3.7.0",
+		"@types/debug": "^4.1.7",
 		"debug": "^4.3.4",
 		"is-plain-object": "^5.0.0",
-		"tslib": "^2.4.1"
-	},
-	"devDependencies": {
-		"@types/debug": "^4.1.7",
+		"tslib": "^2.4.1",
 		"type-fest": "^3.8.0"
 	}
 }
