--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -26,14 +26,14 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.1.0",
+		"@markuplint/types": "3.5.1",
 		"dom-accessibility-api": "^0.5.14",
 		"is-plain-object": "^5.0.0",
-		"tslib": "^2.4.1"
+		"tslib": "^2.4.1",
+		"type-fest": "^3.8.0"
 	},
 	"devDependencies": {
 		"@markuplint/test-tools": "3.2.0",
-		"@markuplint/types": "3.5.1",
-		"json-schema-to-typescript": "11.0.2",
-		"type-fest": "^3.8.0"
+		"json-schema-to-typescript": "11.0.2"
 	}
 }
