--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -26,14 +26,12 @@
 		"@markuplint/selector": "3.7.0",
 		"@markuplint/shared": "3.5.0",
 		"@markuplint/types": "3.5.1",
+		"@types/debug": "^4.1.7",
 		"@ungap/structured-clone": "^1.0.1",
 		"ansi-colors": "^4.1.3",
 		"chrono-node": "^2.5.0",
 		"debug": "^4.3.4",
-		"tslib": "^2.4.1"
-	},
-	"devDependencies": {
-		"@types/debug": "^4.1.7",
+		"tslib": "^2.4.1",
 		"type-fest": "^3.8.0"
 	}
 }
