Add ts-node to dependencies.

--- a/packages/@markuplint/create-rule-helper/package.json
+++ b/packages/@markuplint/create-rule-helper/package.json
@@ -21,6 +21,7 @@
 		"glob": "^10.2.2",
 		"prettier": "^2.8.8",
 		"tslib": "^2.4.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
