Fix to use npm instead of yarn.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 		"vscode:dev": "cd vscode; yarn --ignore-engines vscode:dev",
 		"vscode:lint": "eslint --fix './vscode/**/*.ts'; yarn spellcheck; prettier --write './vscode/**/*{ts,tsx,json,rc,md}';",
 		"vscode:login": "cd vscode; yarn --ignore-engines vscode:login",
-		"vscode:package": "cd vscode; yarn --ignore-engines; yarn --ignore-engines vscode:package",
-		"vscode:release": "cd vscode; yarn --ignore-engines; yarn --ignore-engines vscode:release",
+		"vscode:package": "cd vscode; npm install; npm run vscode:package",
+		"vscode:release": "cd vscode; npm install; npm run vscode:release",
 		"site:dev": "cd website; yarn; yarn site:start",
 		"site:lint": "cd website; yarn; yarn site:lint",
 		"site:build": "cd website; yarn; yarn site:build",
