--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"test:unit": "jest",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
 		"lint": "eslint --fix './packages/**/{*.ts,*.spec.js}'; yarn spellcheck; prettier --write './packages/**/{*.{ts,tsx,json,rc,md},*.spec.js}';",
+		"lint:check": "eslint './packages/**/{*.ts,*.spec.js}' && yarn spellcheck && prettier --check './packages/**/{*.{ts,tsx,json,rc,md},*.spec.js}'",
 		"ga": "actionlint .github/workflows/*.yml",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
