--- a/playground/package.json
+++ b/playground/package.json
@@ -1,59 +1,35 @@
 {
 	"name": "@markuplint/playground",
 	"description": "https://playground.markuplint.dev",
-	"version": "2.1.0-alpha.11",
 	"private": true,
+	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
-		"pg:dev": "yarn; webpack-dev-server --progress",
-		"pg:build": "yarn; webpack --mode production"
-	},
-	"author": "Yusuke Hirao",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/mini-css-extract-plugin": "2.5.1",
-		"@types/script-ext-html-webpack-plugin": "2.1.3",
-		"@types/webpack-dev-server": "4.7.2",
-		"autoprefixer": "10.4.14",
-		"babel-loader": "9.1.2",
-		"css-loader": "6.7.3",
-		"cssnano": "6.0.0",
-		"file-loader": "6.2.0",
-		"html-inline-css-webpack-plugin": "1.11.1",
-		"html-loader": "4.2.0",
-		"html-webpack-plugin": "5.5.1",
-		"json-loader": "0.5.7",
-		"mini-css-extract-plugin": "2.7.5",
-		"monaco-editor-webpack-plugin": "7.0.1",
-		"postcss-base64": "0.7.1",
-		"postcss-calc": "9.0.0",
-		"postcss-custom-media": "9.1.3",
-		"postcss-gap-properties": "4.0.1",
-		"postcss-loader": "7.3.0",
-		"postcss-math": "0.0.10",
-		"sass": "1.62.1",
-		"sass-loader": "13.2.2",
-		"script-ext-html-webpack-plugin": "2.1.5",
-		"style-loader": "3.3.2",
-		"svelte-loader": "3.1.7",
-		"svelte-preprocess": "5.0.3",
-		"ts-loader": "9.4.2",
-		"ttf-loader": "1.0.2",
-		"webpack": "5.81.0",
-		"webpack-cli": "5.0.2",
-		"webpack-dev-server": "4.13.3"
+		"pg:dev": "vite",
+		"pg:build": "tsc && vite build",
+		"pg:lint": "eslint src --ext ts,tsx",
+		"pg:preview": "vite preview"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "3.7.0",
-		"@markuplint/html-spec": "3.8.0",
-		"@markuplint/i18n": "3.8.0",
-		"@markuplint/ml-ast": "3.1.0",
-		"@markuplint/ml-config": "3.8.0",
-		"@markuplint/ml-core": "3.9.0",
-		"@markuplint/ml-spec": "3.8.0",
-		"@markuplint/parser-utils": "3.7.0",
-		"@markuplint/rules": "3.9.0",
-		"monaco-editor": "0.37.1",
-		"svelte": "3.58.0",
-		"tslib": "2.5.0"
+		"@markuplint/parser-utils": "^3.7.0",
+		"@monaco-editor/react": "^4.5.0",
+		"@webcontainer/api": "^1.1.3",
+		"ansi-regex": "^6.0.1",
+		"markuplint": "^3.8.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
+		"@vitejs/plugin-react": "^4.0.0-beta.0",
+		"eslint": "^8.38.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.3.4",
+		"typescript": "^5.0.2",
+		"vite": "^4.3.0"
 	}
 }
