Make the `playground` directory an independent package

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
 	},
 	"workspaces": [
 		"packages/*",
-		"packages/@markuplint/*",
-		"playground"
+		"packages/@markuplint/*"
 	],
 	"devDependencies": {
 		"@types/jest": "^29.5.1",
