--- a/playground/package.json
+++ b/playground/package.json
@@ -11,11 +11,13 @@
 		"pg:preview": "vite preview"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.14",
 		"@markuplint/parser-utils": "^3.7.0",
 		"@monaco-editor/react": "^4.5.0",
 		"@webcontainer/api": "^1.1.3",
 		"ansi-regex": "^6.0.1",
 		"markuplint": "^3.8.0",
+		"monaco-editor": "^0.38.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
@@ -25,10 +27,13 @@
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
 		"@typescript-eslint/parser": "^5.57.1",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.38.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"postcss": "^8.4.23",
+		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.0"
 	}
