--- a/packages/@markuplint/html-spec/tsconfig.json
+++ b/packages/@markuplint/html-spec/tsconfig.json
@@ -3,10 +3,6 @@
 	"compilerOptions": {
 		"composite": true
 	},
-	"references": [
-		{
-			"path": "../ml-spec"
-		}
-	],
+	"references": [],
 	"exclude": ["node_modules"]
 }
