--- a/playground/package.json
+++ b/playground/package.json
@@ -19,7 +19,8 @@
 		"markuplint": "^3.8.0",
 		"monaco-editor": "^0.38.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-split": "^2.0.14"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
