--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"ga": "actionlint .github/workflows/*.yml",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-spec/; yarn gen; cd ../",
-		"all": "yarn lint; yarn clean; yarn gen; yarn build; yarn schema; yarn test:clear; yarn test;",
+		"all": "run-s lint clean build gen schema test:clear test",
 		"check:build": "find . -type f -name \"*.d.ts\" -print | xargs grep \"packages/@markuplint\"",
 		"cli": "./packages/markuplint/bin/markuplint",
 		"vscode:dev": "cd vscode; yarn --ignore-engines vscode:dev",
