--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"site:dev": "cd website; yarn; yarn site:start",
 		"site:lint": "cd website; yarn; yarn site:lint",
 		"site:build": "cd website; yarn; yarn site:build",
-		"pg:dev": "cd playground; yarn pg:dev",
-		"pg:build": "cd playground; yarn pg:build",
+		"pg:dev": "cd playground; yarn; yarn pg:dev",
+		"pg:build": "cd playground; yarn; yarn pg:build",
 		"apidoc": "typedoc --options ./typedoc.json",
 		"release": "lerna publish --exact",
 		"release:next": "lerna publish --dist-tag next --exact --force-publish",
