--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -5,6 +5,7 @@
 	"env": {
 		"browser": true
 	},
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
