--- a/playground/package.json
+++ b/playground/package.json
@@ -26,13 +26,18 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
+		"@typescript-eslint/parser": "^5.59.2",
 		"@vitejs/plugin-react": "^4.0.0-beta.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.38.0",
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsdoc": "^43.2.0",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"eslint-plugin-sort-class-members": "^1.17.1",
 		"postcss": "^8.4.23",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
