Remove to use coveralls on CI test.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -245,7 +245,7 @@ jobs:
               shell: bash
 
             - name: Test
-              run: yarn jest --useStderr --coverage --shard=${{ matrix.shard }} && cat ./coverage/lcov.info | yarn coveralls # `jest:coverage` + shard option
+              run: yarn jest --useStderr --coverage --shard=${{ matrix.shard }}
 
     playground:
         needs: [os-setup, build]
