--- a/vscode/package.json
+++ b/vscode/package.json
@@ -86,7 +86,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "16",
-		"@types/semver": "^7.3.13",
+		"@types/semver": "^7.5.0",
 		"@types/vscode": "^1.77.0",
 		"@vscode/vsce": "^2.19.0",
 		"typescript": "^5.0.4"
@@ -97,7 +97,7 @@
 		"markuplint": "3.10.0",
 		"semver": "^7.5.0",
 		"vscode-languageclient": "^8.1.0",
-		"vscode-languageserver-textdocument": "^1.0.8",
-		"vscode-languageserver": "^8.1.0"
+		"vscode-languageserver": "^8.1.0",
+		"vscode-languageserver-textdocument": "^1.0.8"
 	}
 }
