--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -33,6 +33,7 @@
 		"cosmiconfig": "^8.2.0",
 		"cosmiconfig-typescript-loader": "^4.3.0",
 		"glob": "^10.3.1",
+		"ignore": "^5.2.4",
 		"jsonc": "^2.0.0",
 		"minimatch": "^9.0.2",
 		"tslib": "^2.6.0"
