Switch `markuplint` package from CJS to ESM and add extensions to paths.

--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -6,8 +6,14 @@
 	"license": "MIT",
 	"private": false,
 	"repository": "git@github.com:markuplint/markuplint.git",
-	"main": "lib/index.js",
-	"types": "lib/index.d.ts",
+	"type": "module",
+	"exports": {
+		".": {
+			"import": "./lib/index.js",
+			"types": "./lib/index.d.ts"
+		}
+	},
+	"types": "./lib/index.d.ts",
 	"typedoc": {
 		"entryPoint": "./src/index.ts"
 	},
