Update dependencies that are supporting ESM.

--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -48,14 +48,14 @@
 		"detect-installed": "^2.0.4",
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
-		"get-stdin": "8",
+		"get-stdin": "^9.0.0",
 		"gray-matter": "^4.0.3",
-		"has-yarn": "2",
-		"meow": "9",
-		"node-fetch": "2",
-		"os-locale": "5",
+		"has-yarn": "^3.0.0",
+		"meow": "^12.0.1",
+		"node-fetch": "^3.3.1",
+		"os-locale": "^6.0.2",
 		"strict-event-emitter": "^0.5.0",
-		"strip-ansi": "6",
+		"strip-ansi": "^7.1.0",
 		"tslib": "^2.6.0",
 		"type-fest": "^3.12.0",
 		"uuid": "^9.0.0"
